--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -36,7 +36,15 @@ http {
 
         location / {
             proxy_set_header Host $http_host;
-            proxy_pass http://127.0.0.1:8000;
+            proxy_pass http://127.0.0.1:5000;
+        }
+    }
+
+    server {
+        listen 8000;
+        location / {
+            proxy_set_header Host $http_host;
+            proxy_pass http://127.0.0.1:5000;
         }
     }
 }
