return static file by nginx [2210]

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -61,5 +61,9 @@ http {
             proxy_set_header Host $http_host;
             proxy_pass http://127.0.0.1:5000;
         }
+
+        location ~ ^/(static|upload) {
+            root /home/isucon/isucari/webapp/public;
+        }
     }
 }
